FIX a Safari bug that collapsed header nav links

--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,6 @@ a:hover {
     align-self: left;
   }
   .nav-link {
-    flex: 0;
     padding: 0;
     margin-right: 0 0 20px;
     align-self: center;
